# foray

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  todo.md  tsconfig.json  vite.config.ts
.cargo/: config.toml
assets/: index-B7uW-V5D.css  index-BA4JgtfP.css  index-BAL280M6.css  index-BD0QhbZw.css  index-BOCxJbM6.js  index-Bocdlrfi.js  index-C2lHWJRK.js  index-C5GCHevR.js  index-C9aElEGk.js  index-CWg36nEC.css  index-Ca_pRoeO.js  index-Cd_-k0lg.js  index-Cj_JxC-B.js  index-CzhO88wm.js  index-D0oxOXGo.js  index-DlE-y_tj.css  index-QDmDEu7_.js  index-lGyUR3Ha.css  index-odqwmQYW.css
foray_python_lib/: pyproject.toml
framework/: Cargo.sync-conflict-20241111-111840-F665AL5.toml  Cargo.toml  pyproject.toml
framework/src/: graph.rs  lib.rs  main.rs  main.sync-conflict-20241111-111832-F665AL5.rs  network.rs  node.rs  node_type.rs  node_type.sync-conflict-20241111-111830-F665AL5.rs  port.rs
framework/src/gpipy/: mod.rs  mod.sync-conflict-20241111-111831-F665AL5.rs  py_ndarray.rs  py_ndarray.sync-conflict-20241205-164136-2VOCRAJ.rs
framework/src/port/: io_port.rs  mod.rs  port_def.rs  primitive.sync-conflict-20241111-111836-F665AL5.rs
framework/tests/: network.rs
gpi/: Cargo.toml  README.md  build.rs  index.html  todo.md
gpi/.cargo/: config.toml
gpi/nodes/: dyn_out.py  gpi.py  obj_split.py
gpi/src/: app.rs  main.rs
gpi/src/interface/: node.rs  node_config.rs  port.rs  wire.rs
gpi/src/nodes/: math_nodes.rs  plot.rs  vector_field.rs
gpi/src/style/: button.rs
gpi/src/widget/: workspace.rs
gpi_egui/: Cargo.toml
gpi_egui/src/: b0_invivo.npy  image2d.rs  lib.rs  main.rs
gpi_egui/src/widgets/: histogram.rs
gpi_iced/: Cargo.toml  build.rs  network.ron  network2.ron  old.ron  todo.md
gpi_iced/.cargo/: config.toml
gpi_iced/nodes/: 2d_multiply.py  Bloch.py  Gradient.py  Spin.py  add_array.py  circle_mask.py  dyn_in.py  fft.py  ifft.py  large_compute.py  load_image.py  load_py.py  obj.py  primitive.py  pyproject.toml  rf.py  sleep.py  test_pybind11.py
gpi_iced/src/: app.rs  file_watch.rs  graph.rs  gui_node.rs  lib.rs  main.rs  math.rs  math_nodes.rs  node.rs  node_data.rs  nodes.rs  nodes.sync-conflict-20250114-171909-EMHYASE.rs  pane_grid.rs  wires.rs
gpi_iced/src/interface/: add_node.rs  mod.rs  node.rs  numeric_input.rs  side_bar.rs  theme_config.rs  wire.rs
gpi_iced/src/math/: mod.rs  round_nice.rs  vector.rs
gpi_iced/src/nodes/: async_compute.rs  constant.rs  linspace.rs  math_nodes.rs  mod.rs  plot.rs  plot_complex.rs  port.rs  status.rs  vector_field.rs
gpi_iced/src/python/: mod.rs  ndarray.rs  py_node.rs
gpi_iced/src/style/: button.rs  mod.rs
gpi_iced/src/widget/: custom_button.rs  draggable.rs  mod.rs  node.rs  node_container.rs  pin.rs  shapes.rs  workspace.rs
gpi_iced/src/widget/workspace/: content.rs
gpi_lib/: Cargo.toml
gpi_lib/gpipy/: Cargo.toml  README.md  gpipy.pyi  pyproject.toml
gpi_lib/gpipy/python/gpipy/: __init__.py  node.py
gpi_lib/gpipy/src/: lib.rs
gpi_lib/gpipy/tests/: test_Gadget.py  test_import.py
gpi_lib/python_plugin/: add_int.py  add_int_array.py  gadget_init_plugin.py  gpi_node_1.py  read_np.py  reduce.py  rng.py
gpi_lib/src/: lib.rs  main.rs  py_ffi.rs  pyo.rs
gpi_lib/tests/: node_compute.rs  node_metadata.rs
gpipy/: Cargo.toml  gpipy.pyi  pyproject.toml
gpipy/gpipy/: __init__.py  node.py
gpipy/python_plugin/: add_int.py  read_np.py
gpipy/src/: lib.rs  node.rs  not_main.rs  port.rs  pyo.rs  python_node.rs
gpipy/tests/: node_compute.rs  node_metadata.rs
gpirs/: Cargo.toml  README.md  gpirs.pyi  pyproject.toml  pyrightconfig.json
gpirs/bindings/: pyproject.toml
gpirs/bindings/src/: __init__.py
gpirs/gpirs/: __init__.py
gpirs/gpy/: pyproject.toml
gpirs/gpy/gpy/: PortType.py
gpirs/src/: node.rs  port.rs  propogator.rs  pyo.rs  python_node.rs
gpirs/tests/: 1d_array.npy  3d_array.npy  4d_array.npy  node_compute.rs  node_metadata.rs
homebrew/: gpiv2.rb
network/src/: graph.rs
nodes/: Cross.py  add_array.py  add_int.py  add_int_array.py  fft.py  load_image.py  load_image_3d.py  one.py  ones.py  portType.py  pyproject.toml  range.py  read_np.py  reduce.py  scale_array.py  sin.py  sinc.npy  sinc.py
nodes/core/: Circle_Mask.py  Phantom.py  circle_mask.py  ifft.py  load_image.py
nodes/core/math/: 2d_multiply.py
nodes/core/test/: obj.py  obj_split.py
perf_playground/: Cargo.toml
perf_playground/src/: lib.rs  main.rs  scheduler.rs  test_fft.rs  test_ndarray.rs
port_sketch/: Cargo.toml
port_sketch/src/: main.rs
python/: pyproject.toml
scripts/: math-text-zeta-gen.py
src/: App.css  App.tsx  app.rs  basicTldrawGraph.tsx  config.rs  custom-ui.css  custom-ui.tsx  file_watch.rs  gpi.tsx  gui_node.rs  index.css  lib.rs  main.rs  main.tsx  network.rs  nodes.rs  project.rs  tldrawCanvas.tsx  user_data.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  from_ui.rs  main.rs  rust_node.rs
src/assets/: init_snapshot.json  zeno.json
src/basicGraph/: WireBindingUtil.ts  WireShapeUtil.tsx  WireTool.ts  basicTldrawGraph.tsx  nodeShapeUtil.tsx
src/basicGraph/node/: NodeContent.tsx  nodeDefinitions.tsx  nodeShapeUtil.tsx  portDefinition.ts
src/basicGraph/wire/: WireBindingUtil.ts  WireShapeUtil.tsx  WireTool.ts
src/graph/: builder.ts  graph.test.ts  graph.ts  graphContext.tsx  node.test.ts  node.ts  node2.ts  nodeDefinitions.ts  node_clean.ts  node_simplify.ts  nodes_test.ts  rxjs_hello_world.test.ts  rxjs_hello_world.ts
src/graph/old/: graph.ts  node_clean.ts  node_simplify.ts  nodes_test.ts
src/graph/playground/: nodeType.ts
src/interface/: node.rs  port.rs  side_bar.rs  theme_config.rs  wire.rs
src/nodes/: linspace.rs  math_nodes.rs  plot.rs  plot_complex.rs  port.rs  status.rs  vector_field.rs
src/python/: py_node.rs
src/shapes/components/: numericInput.tsx
src/style/: theme.rs
src/tools/: ui-overrides.tsx
src/ui/: NodeSelect.tsx  custom-ui.css  gpi_ui.tsx
src/util/: array.ts  parse_tauri.ts  svg_util.tsx  titleBar.tsx  useTheme.ts
(+47 files in other folders)
