[package]
name = "gpi_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui_plot = "0.29.0"
image = "0.25.5"
ndarray = "0.16.1"
ndarray-npy = { version = "0.9.1", default-features = false }
ndarray-stats = "0.6.0"
nshare = "0.10.0"
