cargo-features = ["codegen-backend"]
[package]
name = "gpi_iced"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["debug","display"] }
iced = { version = "0.13.1", features = [
	"debug",
	"lazy",
	"advanced",
	"canvas",
] }
ndarray = "0.16.1"
ordermap = "0.5.4"
smol_str = { version = "0.3.2", features = ["serde"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
iced = { version = "0.13.1", features = ["webgl", "web-colors"] }
console_error_panic_hook = "0.1.7"

# [profile.dev]
# debug = 0
# codegen-backend = "cranelift"
