# cargo-features = ["codegen-backend"]
[package]
name = "gpi_iced"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0", features = ["debug", "display"] }
iced = { version = "0.13.1", features = [
	"debug",
	"lazy",
	"advanced",
	"canvas",
] }
ndarray = "0.16.1"
ordermap = { version = "0.5.4", features = ["serde"] }
ron = { version = "0.8.1", features = ["indexmap"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
strum = { version = "0.26.3", features = ["derive"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
iced = { version = "0.13.1", features = ["webgl", "web-colors"] }
console_error_panic_hook = "0.1.7"

# [profile.dev]
# debug = 0
# codegen-backend = "cranelift"
