[project]
name = "nodes"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["numpy"]

[tool.pyright]
venv = ".venv"
venvPath = "../gpirs/"
