[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "gpipy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest","maturin","nox"]

[tool.pyright]
venv = ".venv"
venvPath = "../gpipy"
